# vibetest-daq

./: .gitignore  README.md  copyright  daq_gui_updates.txt  pyproject.toml
docs/manual/: channels.html  cli.html  csv-format.html  getting-started.html  gui-overview.html  index.html  manual.css  metadata.html  troubleshooting.html
src/vibetest_daq/: __init__.py  daq.py  daq_gui.py
src/vibetestdaq/: daq.py
tests/: conftest.py  test_daq.py  test_project_metadata.py
