[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibetest-daq"
version = "0.1.0"
description = "NI cDAQ vibration data acquisition tools for Vibetest."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
    { name = "Vibetest" },
]
dependencies = [
    "h5py>=3.9",
    "nidaqmx>=1.0",
    "numpy>=1.24",
    "PySide6>=6.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[project.scripts]
vibetest-daq = "vibetestdaq.daq:main"
vibetest-daq-gui = "vibetestdaq.daq_gui:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
